--- a/manga.site-geniusss/html/bleach-menu.html
+++ b/manga.site-geniusss/html/bleach-menu.html
@@ -19,7 +19,7 @@
         <img style="width: 100%; height: 400px;" src="../imges/bleach-anime-big-three-is-iconic.png" alt="">
     </div>
     <div class="bleach-manga-img">
-        <img style="border-radius: 16px;" src="../imges/Bleach-manga.png" alt="">
+        <img style="border-radius: 16px; width: 200px; height: 280px;" src="../imges/Bleach-manga.png" alt="">
     </div>
     <div class="description">
         <div class="description-fon">
@@ -33,6 +33,6 @@
             </div>
         </div>
     </div>
-    <button class="read-book">Читать сейчас</button>
+    <a href="../html/bleach.html"><button class="read-book">Читать сейчас</button></a>
 </body>
 </html>
