--- a/manga.site-geniusss/index.html
+++ b/manga.site-geniusss/index.html
@@ -10,41 +10,48 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-12">
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-12">
-                        <div class="navbar"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-1 col-md-6 col-lg-12">
-                            <div class="text">Geniusss</div>
-                            <div class="col-1 col-md-6 col-lg-12">
-                                <div class="top-manga">Top-manga</div>
-                                <input class="search" type="text" placeholder="Search...">
-                                <div class="animatiom">
-                                    <div class="ad">
-                                        <img style="width: 200px; height: 100px;" src="./imges/images.jpg" alt="">
+                        <div class="navbar">
+                        <div class="text">Geniusss</div>
+                            <div class="top-manga">Top-manga</div>
+                            <input class="search" type="text" placeholder="Search...">
+                            </div>
+                            <div class="animatiom">
+                                <div class="ad">
+                                    <img style="width: 200px; height: 100px;" src="./imges/images.jpg" alt="">
                                     </div>
                                 </div>
+                               <div class="bleach">
                                 <a href="./html/bleach-menu.html"><div class="anime-ramka-bleach">
                                     <div class="anime-ramka-bleach-text">
                                         <h1 class="bleach-text" style="color: black; font-family: 'Mukta', sans-serif; font-size: 20px; text-align: center;">Bleach</h1>
                                         <h1 class="bleach-text" style="color: black; text-align: center; font-family: 'Mukta', sans-serif; font-size: 20px;">Том-1 Глава-1</h1>
                                         <h1 class="bleach-text" style="color: black; text-align: center; font-family: 'Mukta', sans-serif; font-size: 20px;">Том-27 Глава-1</h1>
                                     </div>
-                                    <img style="position: absolute; left: 13px; width: 245px; height: 200px;" src="./imges/Bleach-manga.png" alt="">
+                                    <img class="bleach-img-menu" src="./imges/Bleach-manga.png" alt="">
                                 </div></a>
-                                
+                               </div>
+                                <div class="berserk">
+                                    <a href="./html/berserk-menu.html"><div class="anime-ramka-berserk">
+                                        <div class="anime-ramka-berserk-text">
+                                            <h1 class="berserk-text" style="color: black; font-family: 'Mukta', sans-serif; font-size: 20px; text-align: center;">Berserk</h1>
+                                            <h1 class="berserk-text" style="color: black; text-align: center; font-family: 'Mukta', sans-serif; font-size: 20px;">Том-1 Глава-1</h1>
+                                            <h1 class="berserk-text" style="color: black; text-align: center; font-family: 'Mukta', sans-serif; font-size: 20px;">Том-30 Глава-1</h1>
+                                        </div>
+                                        <img class="berserk-img-menu" src="./imges/berserk-manga.jpg" alt="">
+                                    </div></a>
+                                </div>
+                                <div class="eva">
+                                    <a href="./html/eva-menu.html"><div class="anime-ramka-eva">
+                                        <div class="anime-ramka-eva-text">
+                                            <h1 class="berserk-text" style="color: black; font-family: 'Mukta', sans-serif; font-size: 20px; text-align: center;">Evangelion</h1>
+                                            <h1 class="berserk-text" style="color: black; text-align: center; font-family: 'Mukta', sans-serif; font-size: 20px;">Том-1 Глава-1</h1>
+                                            <h1 class="berserk-text" style="color: black; text-align: center; font-family: 'Mukta', sans-serif; font-size: 20px;">Том-12 Глава-1</h1>
+                                        </div>
+                                        <img class="eva-img-menu" src="./imges/eva-manga.jpg" alt="">
+                                    </div></a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 
 
 
